# Coborg-Platform

./: README.md
catkin_ws/: .gitignore  README.md  actuated_manipulation_system_readme.md  main_state_readme.md  vision_system_readme.md  voice_system_readme.md
catkin_ws/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/install/include/gb_visual_detection_3d_msgs/: goal_msg.h
catkin_ws/install/include/goal_getter/: GoalPose.h  goal_msg.h
catkin_ws/install/lib/coborg_move/: moveit_tutorials
catkin_ws/install/lib/darknet_ros/: darknet_ros
catkin_ws/install/lib/hebi_cpp_api_examples/: arm_moveit_node  arm_node  arm_teach_repeat_node  diff_drive_node  gripper_moveit_node  gripper_node  group_node  hexapod_controller  mecanum_base_node  omni_base_controller_node  omni_base_node  rosie_teach_repeat_controller_node
catkin_ws/install/lib/pkgconfig/: coborg_arm.pc  coborg_move.pc  darknet_ros.pc  darknet_ros_3d.pc  darknet_ros_msgs.pc  dof_4_lowerlonger_arm.pc  gb_visual_detection_3d_msgs.pc  goal_getter.pc  hebi_a-2084-01-parallel-gripper_moveit_config.pc  hebi_a-2084-01_moveit_config.pc  hebi_a-2085-04-parallel-gripper_moveit_config.pc  hebi_a-2085-04_moveit_config.pc  hebi_a-2085-05-parallel-gripper_moveit_config.pc  hebi_a-2085-05_moveit_config.pc  hebi_a-2085-06-parallel-gripper_moveit_config.pc  hebi_a-2085-06_moveit_config.pc  hebi_cpp_api_examples.pc  hebi_description.pc  main_state_machine.pc  voice_recog.pc
catkin_ws/src/coborg_arm/config/: sensors_3d.yaml
catkin_ws/src/coborg_arm/launch/: sensor_manager.launch.xml
catkin_ws/src/coborg_move/: CMakeLists.txt  package.xml
catkin_ws/src/coborg_move/launch/: AM_interpolator_launch.launch  Integrated_AM_launch.launch  KDC_actuated_manipulation_launch.launch  KDC_actuated_test_launch.launch  KDC_find_hebi_moveit_planner.launch  KDC_nodes.launch  Smart_hebi_moveit_planner_launcher.launch  demo_hebi_realsense_fakeangles.launch  demo_hebi_realsense_tf.launch  resolve_rate_integrated.launch  voiceGoalPoseGenerator.launch
catkin_ws/src/coborg_move/src/: AM_interpolator.cpp  Integrated_AM.cpp  KDC_actuated_manipulation_node.cpp  KDC_actuated_test_copy.cpp  KDC_find_hebi_moveit_planner.cpp  Smart_hebi_moveit_planner.cpp  coborgarm-temp.hrdf  dof_4_robot.hrdf  find_hebi_modules.cpp  find_hebi_moveit_planner.cpp  grav_comp.hpp  randomGoalPoseGenerator.cpp  resolve_rate.cpp  resolved_rate.cpp  resolved_rate_integrated.cpp  voiceGoalPoseGenerator.cpp
catkin_ws/src/darknet_ros/darknet/: Makefile
catkin_ws/src/darknet_ros/darknet_ros/: CMakeLists.txt
catkin_ws/src/dof_4_lowerlonger_arm/: .setup_assistant  package.xml
catkin_ws/src/dof_4_lowerlonger_arm/config/: arm_demo.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d.yaml
catkin_ws/src/dof_4_lowerlonger_arm/launch/: arm_demo_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
catkin_ws/src/goal_getter/: CMakeLists.txt  package.xml
catkin_ws/src/goal_getter/include/: GoalGetter.h
catkin_ws/src/goal_getter/launch/: goal_getter.launch
catkin_ws/src/goal_getter/msg/: GoalPose.msg
catkin_ws/src/goal_getter/src/: GoalGetter.cpp  goal_getter.cpp  goal_getter_node.cpp
catkin_ws/src/hebi_description/urdf/: 4dof_4inchlow_5inchlong_robot.urdf  4dof_4inchlow_5inchlong_robot.xacro  4dof_4inchlow_5inchlong_robot_collisions.urdf  (+4 more)
demos/: Vision_Task_Space_Checker.py
(+94 files in other folders)
