<?xml version="1.0"?>
<package format="2">
  <name>goal_getter</name>
  <version>0.0.0</version>
  <description>Goal getter</description>

  <maintainer email="yuqingq@andrew.cmu.edu">Yuqing</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gb_visual_detection_3d_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>gb_visual_detection_3d_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>GoalPose</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>gb_visual_detection_3d_msgs</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>hebi_cpp_api</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>